* fix place break word * fix spacing menu

--- a/src/views/place/Place.scss
+++ b/src/views/place/Place.scss
@@ -14,7 +14,7 @@
 }
 
 .texts{
-    word-break: break-all;
+    word-break: break-word;
     padding: 0px 20px;
 }
 
